# d2r2

./: .eslintrc.json  .gitignore  Dockerfile  README.md  bot_url  cached_commands.js  clean-commands.js  clean-global-commands.js  deploy-commands.js  deploy-global-commands.js  docker  index.js  package-lock.json  package.json  pyproject.toml
bot/: Dockerfile  config_prod.sh  package-lock.json  package.json
bot/commands/: beep.js  coucou.js  coucou.json  expressionotron.js
bot/events/: interactionCreate.js
bot/src/: config_dev.sh  index.js
bot/src/commands/: christianclavier.js  coucou.js  elonmusk.js  tfbh.js
bot/src/config/: dummy_config.json
bot/src/events/: interactionCreate.js  message.js
bot/src/utils/: http.js  (+2 more)
bot/test/: cachedCommands.test.js  christianclavier.test.js  elonmusk.test.js  mock.test.js.wip  ping.test.js.wip  tfbh.test.js
bot/tools/: clean-commands.js  clean-global-commands.js  deploy-commands.js  deploy-global-commands.js  ouiche.js  zonesons_links.js
bot/utils/: discordUtils.js  http.js  playSounds.js
chatbot/: Dockerfile  chatbot.py  chatbot_server.py  docker  mood.json
commands/: christianclavier.js  coucou.js  expressionotron.js  kaamelott.js  omg.js  ouiche.js
d2r2/: bot.py  bot_module.py  expressionotron.py  kaamelott.py  main.py
d2r2/expressionotron/: bot.py
d2r2/kaamelott/: bot.py
events/: interactionCreate.js
lego-house/: Dockerfile  docker  lego.py  post_process.py  run.sh  wsgi.py
tools/: ouiche.js  zonesons_download.js  zonesons_links.js
utils/: http.js  playSounds.js
webserver/: app.js  package.json
(+12 files in other folders)
