[tool.poetry]
name = "d2r2"
version = "0.1.0"
description = "D2-R2 discord bot"
authors = ["mmyumu"]
include = ["d2r2/TOKEN"]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
discord = "^1.7.3"
requests = "^2.26.0"
PyNaCl = "^1.4.0"

[tool.poetry.scripts]
d2r2 = "d2r2.main:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
